assets/style.css
/* ... */
#footer > a {
    color: var(--pinnacle-bg);
}
#footer > a:hover {
    text-decoration: underline;
}
.legalees .small {
    letter-spacing: 0.3px;
    font-size: 70%;
}
.legalees a {
    color: var(--pinnacle-bg);
    text-decoration: underline;
}
.legalees a:hover {
    text-decoration: underline;
}
#carousel {
    padding-bottom: 22rem !important;
}
#carousel h2 {
    text-align: center;
    padding-bottom: 0.8rem;
}
#carousel .inner {
    max-width: 90%;
}

.carousel {
    display: flex;
    justify-content: center;
    align-items: center;
}
.carousel-nav {
    width: 80px;
    -webkit-appearance: none !important;
    border: none !important;
    background: none !important;
    outline: none !important;
    font-size: 3rem;
    overflow: visible;
    transform: scale(1.0);
    transition: transform 0.5s ease;
}
.carousel-nav svg {
    width: 80%;
}
.carousel-nav.clicked {
    transform: scale(1.1);
}
.carousel-inner {
    display: flex;
    flex-wrap: nowrap;
    overflow: hidden;
}
.carousel-element {
    width: calc(25% - 100px);
    min-width: 140px;
    padding-left: 50px;
    padding-right: 50px;
    display: inline-block;
    text-align: center;
    flex: 0 0 auto;
    box-sizing: content-box;
}
.carousel-element .carousel-image {
    width: 100%;
    padding: 25px;
    margin-left: auto;
    margin-right: auto;
    cursor: pointer;
    transition: transform 0.2s ease-in-out;
}
.carousel-element .carousel-image:hover {
    transform: translateY(-4px);
}
.carousel-element .carousel-title {
    display: block;
    color: var(--pinnacle-gold);
    font-size: 1.6rem;
}

.carousel-element .carousel-location {
    display: block;
    color: var(--pinnacle-bg);
    font-size: 1.6rem;
}
.carousel-subtitle {
    text-align: center;
    margin-top: 15px;
    font-size: 1.5rem;
}
@media (max-width: 767px) {
    #carousel {
        padding-bottom: 5rem !important;
    }
}
@media (max-width: 1050px) {
    #carousel h2 {
        padding-bottom: 0;
    }
    .carousel-inner {
        flex-wrap: wrap;
        justify-content: center;
    }
    .carousel-nav {
        display: none;
    }
}
@media (max-width: 1260px) {
    .carousel-element {
        width: calc(25% - 50px);
        padding-left: 25px;
        padding-right: 25px;
    }

}
@media (min-width: 1550px) {
    #carousel {
        padding-bottom: 20rem !important;
    }

}
.mirrorflip {
    transform: scale(-1, 1);
}
.mirrorflip.clicked {
    transform: scale(-1.1, 1.1);
}
.bounceLeftAnimation {
    animation-name: bounceLeftAnimation;
    animation-duration: 0.6s;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
}
@keyframes bounceLeftAnimation {
    0% {
        transform: translateX(0px);
    }
    70% {
        transform: translateX(-15px);
    }
    100% {
        transform: translateX(0px);
    }
}

.bounceRightAnimation {
    animation-name: bounceRightAnimation;
    animation-duration: 0.6s;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
}
@keyframes bounceRightAnimation {
    0% {
        transform: translateX(0px);
    }
    70% {
        transform: translateX(15px);
    }
    100% {
        transform: translateX(0px);
    }
}


.big-num-container {
    display: flex;
    width: 100%;
}
#mobileView .big-num-container {
    flex-direction: column;
}
.big-num-container .big-num {
    flex-basis: 33%;
    text-align: center;
    padding: 0 2.5%;
}
.big-num .big-num-num {
    font-size: 5rem;
    font-weight: bold;
}
.big-num .big-num-label {
    color: var(--pinnacle-gold);
    font-size: 1.5rem
}


#pre-description {
    height: 100vh;
}
.overflow-hide {
    width: 100%;
    height: 100vh;
    overflow: hidden;
}
.scroll-container {
    background-color: red;
    width: 100%;
    height: 100vh;
    overflow-y: hidden;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}
#pre-description .eyecatchers {
    height: 100vh;
    position: relative;
}
.eyecatcher {
    display: flex;
    height: 100vh;
    align-items: center;
    position: absolute;
    width: 100%;
    top: 20%;
    opacity: 0;
    padding: 0 10%;
    left: 0;
}
.eyecatcher-icon {
    width: 25%;
}
.eyecatcher-icon img {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.eyecatcher-body {
    width: 60%;
    margin-left: 15%;
}
.eyecatcher-body h3 {
    font-size: 3rem;
}
.eyecatcher-body p {
    font-size: 1.5rem;
}
#count-display {
    position: fixed;
    top: 0;
    right: 0;
    padding: 5px;
    color: black;
    background-color: white;
    border: 1px solid black;
    z-index: -1;
    opacity: 0;
    transition: opacity 1s;
}
/* lol overwrite default textarea styles */
.teaser {
    overflow: hidden;
    resize: unset;
    text-rendering: unset;
    color: unset;
    letter-spacing: unset;
    word-spacing: unset;
    text-transform: unset;
    text-indent: unset;
    text-shadow: unset;
    appearance: unset;
    background-color: unset;
    flex-direction: unset;
    cursor: unset;
    font: inherit;
    margin: unset;
    border: unset;
    padding: unset;
    white-space: unset;
    overflow-wrap: unset;
    outline: unset;
    height: 1em;
    width:1em;
    display: inline-block;
    text-align: left;
    position: relative;
    line-height: 100%;
    left: 2px;
    -webkit-text-fill-color: unset;

}
/* by far my favorite hack here. apply top only on webkit */
.teaser:not(*:root) {
    top: 0.3em;
}

